добавила сбор данных и сохранение их в Эксель